src/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\commons-lang-2.6.jar;C:\Program Files (x86)\BlueJ\lib\userlib\commons-logging-1.1.3.jar;C:\Program Files (x86)\BlueJ\lib\userlib\hsqldb.jar;C:\Program Files (x86)\BlueJ\lib\userlib\jackcess-2.1.11.jar;C:\Program Files (x86)\BlueJ\lib\userlib\JTattoo-1.6.11.jar;C:\Program Files (x86)\BlueJ\lib\userlib\rs2xml.jar;C:\Program Files (x86)\BlueJ\lib\userlib\ucanaccess-4.0.4.jar;F:\Projects\INMAS\INMAS_MS\SMS
-d
F:\Projects\INMAS\INMAS_MS\SMS\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
F:\Projects\INMAS\INMAS_MS\SMS\LoginPage.java
<---- end of javadoc command ---->
Loading source file F:\Projects\INMAS\INMAS_MS\SMS\LoginPage.java...
F:\Projects\INMAS\INMAS_MS\SMS\LoginPage.java:210: error: 'try' without 'catch', 'finally' or resource declarations
        try{
        ^
F:\Projects\INMAS\INMAS_MS\SMS\LoginPage.java:213: error: ')' expected
        }ch(Exception e){}
                     ^
F:\Projects\INMAS\INMAS_MS\SMS\LoginPage.java:213: error: illegal start of expression
        }ch(Exception e){}
                       ^
F:\Projects\INMAS\INMAS_MS\SMS\LoginPage.java:213: error: ';' expected
        }ch(Exception e){}
                        ^
F:\Projects\INMAS\INMAS_MS\SMS\LoginPage.java:216: error: <identifier> expected
        lblBackImg.setBounds(0, 0, 594, 313);
                            ^
F:\Projects\INMAS\INMAS_MS\SMS\LoginPage.java:216: error: illegal start of type
        lblBackImg.setBounds(0, 0, 594, 313);
                             ^
F:\Projects\INMAS\INMAS_MS\SMS\LoginPage.java:216: error: illegal start of type
        lblBackImg.setBounds(0, 0, 594, 313);
                                ^
F:\Projects\INMAS\INMAS_MS\SMS\LoginPage.java:216: error: illegal start of type
        lblBackImg.setBounds(0, 0, 594, 313);
                                   ^
F:\Projects\INMAS\INMAS_MS\SMS\LoginPage.java:216: error: illegal start of type
        lblBackImg.setBounds(0, 0, 594, 313);
                                        ^
F:\Projects\INMAS\INMAS_MS\SMS\LoginPage.java:217: error: <identifier> expected
        frame.getContentPane().add(lblBackImg);
                            ^
F:\Projects\INMAS\INMAS_MS\SMS\LoginPage.java:217: error: ';' expected
        frame.getContentPane().add(lblBackImg);
                              ^
F:\Projects\INMAS\INMAS_MS\SMS\LoginPage.java:219: error: class, interface, or enum expected
}
^
12 errors
